# MAVSDK

./: .gitignore  CMakePresets.json
myApps/flyMission/: CMakeLists.txt  fly_mission_ex.cpp
src/mavsdk/core/: CMakeLists.txt  log.h  mavlink_parameter_client.cpp  system.cpp
src/mavsdk/plugins/action/: action.cpp  action_impl.cpp  action_impl.h
src/mavsdk/plugins/action/include/plugins/action/: action.h
src/mavsdk/plugins/mavlink_passthrough/: mavlink_passthrough.cpp  mavlink_passthrough_impl.cpp  mavlink_passthrough_impl.h
src/mavsdk/plugins/mavlink_passthrough/include/plugins/mavlink_passthrough/: mavlink_passthrough.h
src/mavsdk/plugins/telemetry/: telemetry.cpp  telemetry_impl.cpp
src/mavsdk/plugins/telemetry/include/plugins/telemetry/: telemetry.h
